fixed header z-index

--- a/css/main.css
+++ b/css/main.css
@@ -223,7 +223,7 @@ body { position: relative; }
 
 #header {
 	position: relative;
-	z-index: 10;
+	z-index: 101;
 	width: 100%;
 	height: auto;
 	margin-bottom: -1em;
